- Support multiline labels for wxCheckBox.
- Print preview is now rendered in the resolution used by printer and
  accurately represents what will be printed. This fixes wxHtmlEasyPrinting
  preview inaccuracies on Windows; on other platforms, native preview
  should be used.

wxX11:

- Added mouse wheel support (David Hart).
- Make Enter key activate the default button (David Hart).


2.8.8
-----

All:

- Fixed bug with parsing some dates in wxDateTime (Bob Pesner).
- Fixed bug with parsing negative time zones in wxDateTime::ParseRfc822Date().
- Initialize current line in wxTextBuffer ctor (Suzuki Masahiro).
- Improved performance of XML parsing (Francesco Montorsi).
- Fix wxDateTime::ParseRfc822Date() to handle missing seconds (Joe Nader).

All (GUI):

- Added wxWindow::GetNextSibling() and GetPrevSibling().
- Support wxGRID_AUTOSIZE in wxGrid::SetRow/ColLabelSize() (Evgeniy Tarassov).
- Ensure that wxGrid::AutoSizeColumn/Row() never sets column/row size
  smaller than the minimal size.
- Added <scrollrate> parameter to wxScrolledWindow XRC handler.
- wxRichTextCtrl performance has been improved considerably.
- Several wxRichTextCtrl style, paste and undo bugs fixed.
- Added wxRichTextCtrl superscript and subscript support (Knut Petter Lehre).
- wxNotebook RTTI corrected, so now wxDynamicCast(notebook, wxBookCtrlBase)
  works.
- When focus is set to wxScrolledWindow child, scroll it into view.
- Improve wximage::ResampleBox() (Mihai Ciocarlie).
- Implemented ScrollList() in generic wxListCtrl (Tim Kosse).
- SaveAs in docview takes into account path now.
- Fixed wxXmlResource::GetText() to convert data to current locale's
  charset in ANSI build.
- wxGrid now indicates focus by using different colour for selection
  and hiding cell cursor when it doesn't have focus.
- Added alpha support to wxImage::Paste() (Steven Van Ingelgem)
- Use current date when opening popup in generic wxDatePickerCtrl.